# tetris

./: .gitignore  CMakeLists.txt  README.md  TODO
cmake/: FindSDL_ttf.cmake
include/: tetris.h
resource/: CMakeLists.txt
src/: audio.c  error.c  init.c  main.c
src/key_hook/: hook_init.c
src/key_kook/: hook_init.c  key_hook.c
src/render/: draw_pixel.c  piece_tools.c  render.c
src/socket/: clien  clien.c.c  client.c  server  server.c  socket_tools.c
